feat: update service for FE